# Data-Structures-Algorithms-in-C

./: .gitignore  CMakeLists.txt  Nested if...else  README.md  if...else Ladder
Basic C/: README.md
Basic C/C Flow Control/: Ex break statement.c  Ex continue statement.c  Ex goto Statement.c  Ex if else Ladder.c  Ex switch statement.c  README.md  if statement.c
Basic C/C Flow Control/C Loop/: Ex do while loop.c
Basic C/C Flow Control/C if else Statement/: Nested if...else.c  if...else statement.c
Basic C/C Flow Control/Loops/: Ex while loop.c  Ex1 for loop.c  Ex2 for loop.c
Basic C/C Functions/: Ex Argument Passed But No Return Value.c  Ex Argument Passed and Returns a Value.c  Ex No Argument Passed and No Return Value.c  Ex No Arguments Passed But Returns a Value.c  Ex Square root using function.c  Ex Sum of Natural Numbers Using Recursion.c  README.md
Basic C/C Pointers/: README.md
Basic C/C Programming Arrays/: Ex1 Array Input Output.c  Ex1 Pass Individual Array Elements.c  Ex2 Calculate Average.c  Ex2 Pass Arrays to Functions.c  Ex3 Pass two-dimensional arrays.c  README.md
Linked List/: demo.c
