cmake_minimum_required(VERSION 3.31)
project(Data_Structures_Algorithms_in_C C)

set(CMAKE_C_STANDARD 11)

add_executable(Data_Structures_Algorithms_in_C main.c
        "Linked List/demo.c"
        "Basic C/C Flow Control/C if else Statement/if statement.c"
        "Basic C/C Flow Control/C if else Statement/if...else statement.c"
        "Basic C/C Flow Control/C if else Statement/if...else Ladder.c"
        "Basic C/C Flow Control/C if else Statement/Nested if...else.c"
)
